--- a/src/cafemanagement/mainFormDesign.css
+++ b/src/cafemanagement/mainFormDesign.css
@@ -48,3 +48,33 @@ Click nbfs://nbhost/SystemFileSystem/Templates/Other/CascadeStyleSheet.css to ed
 .transparent{
     -fx-background-color: transparent;
 }
+.table-view{
+    -fx-background-color:transparent;
+    -fx-padding: 0;
+    -fx-border-color: linear-gradient(to bottom right, #0f6789, #286155);
+    -fx-border-radius: 5px;
+    -fx-border-width: 1.5px;
+     
+}
+.table-view .column-header-background{
+    -fx-background-color:linear-gradient(to bottom right, #0f6789, #286155);
+    -fx-background-radius:5px 5px 0 0; 
+    -fx-background-insets:0 0 0 0;
+    
+}
+.table-view .column-header, .filter{
+    -fx-background-color: transparent;
+    -fs-size:40px;
+}
+.table-view .column-header.label{
+    -fx-text-fill:#fff;
+}
+.btn{
+    -fx-background-color: linear-gradient(to bottom right, #0f6789, #286155);
+    -fx-cursor: hand;
+    -fx-text-fill: #fff;
+    -fx-font-size:14px;
+}
+.btn:hover{
+    -fx-background-color: linear-gradient(to bottom right, #0fb565, #399a8f);
+}
